change field name to application to make it more generic in kkp configuration
Signed-off-by: soer3n <srenhenning@googlemail.com>

--- a/docs/zz_generated.kubermaticConfiguration.ce.yaml
+++ b/docs/zz_generated.kubermaticConfiguration.ce.yaml
@@ -381,8 +381,8 @@ spec:
       dockerTagSuffix: ""
     # APIServerReplicas configures the replica count for the API-Server deployment inside user clusters.
     apiserverReplicas: 2
-    # DefaultApplications contains configuration for default Application settings. This is an ee-only feature.
-    defaultApplications:
+    # Applications contains configuration for default Application settings. This is an ee-only feature.
+    applications:
       namespace: ""
     # DisableAPIServerEndpointReconciling can be used to toggle the `--endpoint-reconciler-type` flag for
     # the Kubernetes API server.
