added versions in prow jobs
Signed-off-by: Iskren <iskren@kubermatic.com>

--- a/.prow/applications-catalog.yaml
+++ b/.prow/applications-catalog.yaml
@@ -20,6 +20,8 @@ presubmits:
           args:
             - "--application-name"
             - "argocd"
+            - "--application-version"
+            - "v2.10.0"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -58,6 +60,8 @@ presubmits:
           args:
             - "--application-name"
             - "cert-manager"
+            - "--application-version"
+            - "v1.14.1"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -96,6 +100,8 @@ presubmits:
           args:
             - "--application-name"
             - "echoserver"
+            - "--application-version"
+            - "0.7.0"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -134,6 +140,8 @@ presubmits:
           args:
             - "--application-name"
             - "echoserver-with-variables"
+            - "--application-version"
+            - "0.7.0"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -172,6 +180,8 @@ presubmits:
           args:
             - "--application-name"
             - "falco"
+            - "--application-version"
+            - "0.37.0"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -210,6 +220,8 @@ presubmits:
           args:
             - "--application-name"
             - "flux"
+            - "--application-version"
+            - "2.2.2"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -248,6 +260,8 @@ presubmits:
           args:
             - "--application-name"
             - "k8sgpt"
+            - "--application-version"
+            - "v0.3.26"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -286,6 +300,8 @@ presubmits:
           args:
             - "--application-name"
             - "kube-vip"
+            - "--application-version"
+            - "v0.4.1"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -324,6 +340,8 @@ presubmits:
           args:
             - "--application-name"
             - "kubevirt"
+            - "--application-version"
+            - "v1.1.0"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -362,6 +380,8 @@ presubmits:
           args:
             - "--application-name"
             - "metallb"
+            - "--application-version"
+            - "v0.14.3"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -400,6 +420,8 @@ presubmits:
           args:
             - "--application-name"
             - "nginx_ingress_controller"
+            - "--application-version"
+            - "1.9.6"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -438,6 +460,8 @@ presubmits:
           args:
             - "--application-name"
             - "nvidia_gpu_operator"
+            - "--application-version"
+            - "v23.9.1"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -476,6 +500,8 @@ presubmits:
           args:
             - "--application-name"
             - "sealed-secrets"
+            - "--application-version"
+            - "2.4.8"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -514,6 +540,8 @@ presubmits:
           args:
             - "--application-name"
             - "trivy"
+            - "--application-version"
+            - "0.37.2"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -552,6 +580,8 @@ presubmits:
           args:
             - "--application-name"
             - "trivy-operator"
+            - "--application-version"
+            - "0.18.4"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
