--- a/.prow/tests.yaml
+++ b/.prow/tests.yaml
@@ -14,7 +14,7 @@
 
 presubmits:
   - name: pre-kubermatic-test
-    run_if_changed: "^(cmd|codegen|hack|pkg)/"
+    run_if_changed: "(go.mod|go.sum|cmd/|codegen/|hack/|pkg/)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -35,7 +35,7 @@ presubmits:
               value: ee
 
   - name: pre-kubermatic-test-integration
-    run_if_changed: "^(cmd|codegen|hack|pkg)/"
+    run_if_changed: "(go.mod|go.sum|cmd/|codegen/|hack/|pkg/)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
