--- a/.prow/features.yaml
+++ b/.prow/features.yaml
@@ -308,3 +308,28 @@ presubmits:
               cpu: 2
             limits:
               memory: 6Gi
+
+  - name: pre-kubermatic-kkp-argocd-gitops-e2e
+    run_if_changed: "charts/gitops"
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+    labels:
+      preset-e2e-ssh: "true"
+      preset-aws-e2e-kkp: "true"
+      preset-docker-pull: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/build:go-1.23-node-20-kind-0.26-7
+          command:
+            - "./hack/ci/run-argocd-e2e-tests.sh"
+          env:
+            - name: KUBERMATIC_EDITION
+              value: ee
+          securityContext:
+            privileged: true
+          resources:
+            requests:
+              memory: 4Gi
+              cpu: 2
+            limits:
+              memory: 6Gi
