add default namespace for apps and managed helm releases (#13932)
* add default namespace for apps and managed helm releases

* add field to kubermaticconfiguration crd to make default applicationinstallation namespace configurable
* add condition to set the default appinstallation namespace
* add condition to set the default release namespace configured in related appdefinition

Signed-off-by: soer3n <srenhenning@googlemail.com>

* update docs after adding crd field

Signed-off-by: soer3n <srenhenning@googlemail.com>

* fix unit tests and add tests for new crd fields

Signed-off-by: soer3n <srenhenning@googlemail.com>

* fix linting errors after adding new unit tests

Signed-off-by: soer3n <srenhenning@googlemail.com>

* move default app namespace to ee version only

* add wrapper files for building the feature for ee only
* add ee unit tests
* remove unit test regarding this from general unit tests

Signed-off-by: soer3n <srenhenning@googlemail.com>

* avoid copying values and change comment for new value

* use pointer instead of passing value to the function for generating the app namespace
* dereference the returned pointer in the generated applicationinstallation spec
* rename utils.go to namespace.go and test file accordingly
* modify comment for default app namespace field in kubermaticconfiguration

Signed-off-by: soer3n <srenhenning@googlemail.com>

* add ee-only comment to new field + change failed test msg

* modify comment for new field in kubermaticconfiguration to make clear that it is only supported in enterprise edition
* change message for failed tests to be not redundant
* change year in header in new created files

Signed-off-by: soer3n <srenhenning@googlemail.com>

* add namespace mutator + ensure appinstall namespace immutability

* move applicationinstallation generation into ensureApplicationInstallation func
** this is to ensure that an applicationinstallation and the related helm release is only installed once
** move getAppNamespace() func

--- a/docs/zz_generated.kubermaticConfiguration.ce.yaml
+++ b/docs/zz_generated.kubermaticConfiguration.ce.yaml
@@ -381,6 +381,11 @@ spec:
       dockerTagSuffix: ""
     # APIServerReplicas configures the replica count for the API-Server deployment inside user clusters.
     apiserverReplicas: 2
+    # Applications contains configuration for default Application settings. This is an ee-only feature.
+    applications:
+      # Namespace is the namespace which is set as the default for applications installed via ui
+      # If left empty the default for the application installation namespace is the name of the resource itself
+      namespace: ""
     # DisableAPIServerEndpointReconciling can be used to toggle the `--endpoint-reconciler-type` flag for
     # the Kubernetes API server.
     disableApiserverEndpointReconciling: false
