--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
@@ -2322,6 +2322,15 @@ spec:
                       description: APIServerReplicas configures the replica count for the API-Server deployment inside user clusters.
                       format: int32
                       type: integer
+                    applications:
+                      description: Applications contains configuration for default Application settings. This is an ee-only feature.
+                      properties:
+                        namespace:
+                          description: |-
+                            Namespace is the namespace which is set as the default for applications installed via ui
+                            If left empty the default for the application installation namespace is the name of the resource itself
+                          type: string
+                      type: object
                     disableApiserverEndpointReconciling:
                       description: |-
                         DisableAPIServerEndpointReconciling can be used to toggle the `--endpoint-reconciler-type` flag for
