--- a/pkg/crd/k8c.io/kubermatic.k8c.io_policyinstances.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_policyinstances.yaml
@@ -230,7 +230,7 @@ spec:
               description: PolicyInstanceStatus is the status of the policy instance.
               properties:
                 conditions:
-                  description: Conditions is a list of conditions for the policy instance.
+                  description: Conditions represents the latest available observations of the policy instance's current state
                   items:
                     description: Condition contains details for one aspect of the current state of this API Resource.
                     properties:
@@ -285,6 +285,13 @@ spec:
                       - type
                     type: object
                   type: array
+                  x-kubernetes-list-map-keys:
+                    - type
+                  x-kubernetes-list-type: map
+                observedGeneration:
+                  description: ObservedGeneration is the generation observed by the controller.
+                  format: int64
+                  type: integer
               type: object
           type: object
       served: true
