--- a/.prow/applications-catalog.yaml
+++ b/.prow/applications-catalog.yaml
@@ -1,6 +1,6 @@
 presubmits:
   - name: pre-kubermatic-appcatalog-argocd
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/argocd-app.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -40,7 +40,7 @@ presubmits:
               memory: 18Gi
 
   - name: pre-kubermatic-appcatalog-cert-manager
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/cert-manager-app.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -80,7 +80,7 @@ presubmits:
               memory: 18Gi
 
   - name: pre-kubermatic-appcatalog-falco
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/falco-app.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -120,7 +120,7 @@ presubmits:
               memory: 18Gi
 
   - name: pre-kubermatic-appcatalog-flux
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/flux2-app.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -160,7 +160,7 @@ presubmits:
               memory: 18Gi
 
   - name: pre-kubermatic-appcatalog-k8sgpt
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/k8sgpt-app.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -200,7 +200,7 @@ presubmits:
               memory: 18Gi
 
   - name: pre-kubermatic-appcatalog-kube-vip
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/kube-vip-app.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -240,7 +240,7 @@ presubmits:
               memory: 18Gi
 
   - name: pre-kubermatic-appcatalog-kubevirt
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/kubevirt.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -280,7 +280,7 @@ presubmits:
               memory: 18Gi
 
   - name: pre-kubermatic-appcatalog-metallb
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/metallb-app.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -320,7 +320,7 @@ presubmits:
               memory: 18Gi
 
   - name: pre-kubermatic-appcatalog-nginx-ingress-controller
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/nginx-app.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -360,7 +360,7 @@ presubmits:
               memory: 18Gi
 
   - name: pre-kubermatic-appcatalog-nvidia-gpu-operator
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/nvidia-gpu-operator-app.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -399,48 +399,8 @@ presubmits:
             limits:
               memory: 18Gi
 
-  - name: pre-kubermatic-appcatalog-sealed-secrets
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
-    decorate: true
-    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
-    labels:
-      preset-aws-e2e-kkp: "true"
-      preset-kubeconfig-ci: "true"
-      preset-docker-mirror: "true"
-      preset-docker-pull: "true"
-      preset-docker-push: "true"
-      preset-kind-volume-mounts: "true"
-      preset-goproxy: "true"
-      preset-e2e-ssh: "true"
-    spec:
-      containers:
-        - image: quay.io/kubermatic/build:go-1.23-node-20-kind-0.24-4
-          command:
-            - "./hack/ci/run-default-application-e2e-test.sh"
-          args:
-            - "--application-name"
-            - "sealed-secrets"
-            - "--application-version"
-            - "2.4.8"
-          env:
-            - name: KUBERMATIC_EDITION
-              value: ee
-            - name: SERVICE_ACCOUNT_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: e2e-ci
-                  key: serviceAccountSigningKey
-          securityContext:
-            privileged: true
-          resources:
-            requests:
-              memory: 14Gi
-              cpu: 4
-            limits:
-              memory: 18Gi
-
   - name: pre-kubermatic-appcatalog-trivy
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/trivy-app.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -480,7 +440,7 @@ presubmits:
               memory: 18Gi
 
   - name: pre-kubermatic-appcatalog-trivy-operator
-    run_if_changed: "(pkg/ee/default-application-catalog/|.prow/)"
+    run_if_changed: "(pkg/ee/default-application-catalog/trivy-operator-app.yaml"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
